css/styles.css
/*FONT*/

@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

/*RESET*/

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/*SHARED*/

:root {
    /*COLORS*/
    --primary-dark-bg-color: #1f2937;
    --white-text-color: #f9faf8;
    --secondary-grey-color: #e5e7eb;
    --button-cta-bg-color: #3882f6;
}

/*BODY*/

body {
    font-family: 'Roboto', sans-serif;
    /*
    min-height: 100vh;
    */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.header,
.footer {
    background-color: var(--primary-dark-bg-color);
    justify-content: center;
    align-items: center;
}

.header,
.header .nav,
.main,
.footer {
    width: 100%;
    display: flex;
}

/*1. HEADER*/

.header .nav {
    justify-content: space-between;
    padding: 15px 150px;
}

.header .nav .header-logo-container a {
    color: var(--white-text-color);
    font-size: 24px;
    font-weight: bold;
    text-decoration: none;
}

.header .nav ul {
    list-style: none;
    display: flex;
    column-gap: 14px;
}

.header .nav ul a {
    text-decoration: none;
    color: var(--secondary-grey-color);
    font-size: 18px;
}

/*Header links animations*/

.header .nav .header-logo-container a:hover,
.header .nav .header-logo-container a:active,
.header .nav ul a:hover,
.header .nav ul a:active {
    color: var(--button-cta-bg-color);
    transition-duration: 0.2s;
}

/*2. MAIN*/

.main {
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.main-hero--container,
.main-info--container,
.main-quote--container,
.main-cta--container {
    padding: 15px 150px;
    width: 100%;
    display: flex;
}

.main-hero--container {
    background-color: var(--primary-dark-bg-color);
    justify-content: space-around;
    align-items: center;
}

.main-hero--container .hero-introduction--container h2,
.main-hero--container .hero-introduction--container button {
    color: var(--white-text-color);
}

.main-hero--container .hero-introduction--container button {
    margin-top: 10px;
    background-color: var(--button-cta-bg-color);
    border: none;
    border-radius: 4px;
    padding: 10px;
    font-size: 18px;
    font-weight: bold;
    cursor: pointer;
}

.main-hero--container .hero-introduction--container h2 {
    font-size: 48px;
    font-weight: 900;
}

.main-hero--container .hero-introduction--container p {
    color: var(--secondary-grey-color);
    font-size: 18px;
    margin-top: 10px;
}

.main-hero--container .hero-img--container img {
    max-width: 250px;
    border-radius: 50%;
}

/*Main button animation*/

.main-hero--container .hero-introduction--container button:hover,
.main-hero--container .hero-introduction--container button:active {
    background-color: #0f61dd;
    transition-duration: 0.2s;
}
/*3. FOOTER*/

.footer {
    color: var(--white-text-color);
    padding: 30px 0;
}

/*MEDIA QUERIES*/

@media (max-width: 1024px) {

    /*2. MAIN*/

    /*2.1. MAIN HERO*/

    .main-hero--container {
        flex-direction: column;
        text-align: center;
    }

    .main-hero--container .hero-img--container {
        order: -1;
    }
    .main-hero--container .hero-img--container img {
        max-width: 200px;
    }
}

@media (max-width: 800px) {

    /*1. HEADER*/

    .header .nav {
        flex-direction: column;
        align-items: center;
        row-gap: 15px;
    }

    /*2. MAIN*/

    /*2.1. MAIN HERO*/

    .main-hero--container,
    .main-info--container,
    .main-quote--container,
    .main-cta--container {
        padding: 15px 60px;
}

    .main-hero--container {
        justify-content: space-around;
        align-items: center;
    }

    .main-hero--container .hero-introduction--container h2 {
        font-size: 38px;
        font-weight: bold;
    }

    .main-hero--container .hero-introduction--container p,
    .main-hero--container .hero-introduction--container button {
        font-size: 16px;
    }
}

